# diffusion2D

./: .gitignore  README.md  output.py  pyproject.toml  test-script.py
niyati_diffusion2d/: diffusion2d.py
niyati_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
